# SyncCut

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  final-render-quality-review.md  future-phases.md  matching.md  release-checklist-v0.1.md  schemas.md  testing.md  tsmc-visual-asset-manifest.md
docs/plans/: README.md  audio-alignment-generation-design.md  broll-downloader-provider-workflow.md  build-timeline-mvp.md  cli-ux-polish.md  developer-workflow-ci.md  elevenlabs-audio-alignment-provider.md  end-to-end-pipeline-command-and-runbook.md  export-remotion-props.md  final-release-render-quality-review.md  preflight-file-verification.md  (+25 more)
remotion/: README.md  package-lock.json  package.json  props.json  tsconfig.json
synccut/: __init__.py  alignment_loader.py  audio_generation.py  broll_downloader.py  cli.py  elevenlabs_provider.py  models.py  narration_package.py  pexels_provider.py  pipeline.py  preflight.py  remotion_assets.py  remotion_exporter.py  scenes_loader.py  timeline_builder.py  timeline_inspector.py  timeline_validator.py  validators.py  visual_assets.py  visual_duration.py  visual_manifest.py
tests/: test_alignment_loader.py  test_audio_generation.py  test_broll_downloader.py  test_cli.py  test_narration_package.py  test_package.py  test_pipeline.py  test_preflight.py  test_remotion_assets.py  test_remotion_exporter.py  test_scenes_loader.py  test_timeline_builder.py  test_timeline_inspector.py  test_timeline_validator.py  test_visual_assets.py  test_visual_duration.py  test_visual_manifest.py
(+21 files in other folders)
