[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "synccut"
version = "0.1.0"
description = "Build structured video production timelines from scenes, audio, and alignment data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
synccut = "synccut.cli:app"

[tool.setuptools.packages.find]
include = ["synccut*"]
